force-app/main/default/objects/Lead/fields/Conversion_Flag__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Flag__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Conversion Flag</label>
    <type>Checkbox</type>
</CustomField>