force-app/main/default/objects/Lead/fields/File_No_Auto_Number__c.field-meta.xml
<CustomField>
    <fullName>File_No_Auto_Number__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>File No Auto Number</label>
    <type>AutoNumber</type>
</CustomField>