force-app/main/default/objects/Lead/recordTypes/Lawyer_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Lawyer_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Lawyer Lead Process</businessProcess>
    <description>Use this record type to track lawyer leads</description>
    <label>Lawyer Record Type</label>
</RecordType>